Listed more skills to programming

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="skill">
           <span class="icon"><i class="fa fa-code wow bounceInLeft" aria-hidden="true"></i></span>
           <h5>Programming</h5>
-          <p>HTML5 &amp; CSS3 including frameworks like Bootstrap, Skeleton, Bulma, Google Material UI. And javascript of course.</p>
+          <p>Javascript and NodeJS. HTML5 &amp; CSS3 including frameworks like Bootstrap, Skeleton, Bulma, Google Material UI. From databases I'm most familiar with MongoDB.</p>
         </div>
       </div>
 
@@ -85,7 +85,7 @@
       <div class="col-md-3">
         <div class="skill">
           <span class="icon"><i class="fa fa-globe wow bounceInDown" aria-hidden="true"></i></span>
-          <h5>Language</h5>
+          <h5>Languages</h5>
           <p>Finnish, English</p>
         </div>
       </div>
