made changes to about me

--- a/index.html
+++ b/index.html
@@ -60,8 +60,8 @@
         <h2>About myself</h2>
         <hr>
         <p>
-          I'm 24 years old IT student from Haaga-Helia University of Applied Sciences. My major is software development and especially front-end.
-          I'm passionate about front-end coding and UI/UX design and all kinds of visual things. I'm perfectionist on visual things and I always try to make my designs distinguishable from others.
+          I'm 25 years old IT student from Haaga-Helia University of Applied Sciences. My major is software development. I'm more familiar with front-end but I'm continuously learning more and more back-end coding.
+          I'm passionate about all kinds of visual things. I'm perfectionist on visual things and I always try to make my designs distinguishable from others.
           I'm always looking inspiration for new projects and designs and ready to learn new things to get results that I want.
         </p>
       </div>
