--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="skill">
           <span class="icon"><i class="fa fa-code wow bounceInLeft" aria-hidden="true"></i></span>
           <h5>Programming</h5>
-          <p>Javascript and NodeJS. HTML5 &amp; CSS3 including frameworks like Bootstrap, Skeleton, Bulma, Google Material UI. From databases I'm most familiar with MongoDB.</p>
+          <p>Javascript, React and NodeJS. HTML5 &amp; CSS3 including frameworks like Bootstrap, Skeleton, Bulma, Google Material UI. From databases I'm most familiar with MongoDB.</p>
         </div>
       </div>
 
@@ -77,8 +77,7 @@
         <div class="skill">
           <span class="icon"><i class="fa fa-paint-brush wow bounceInDown" aria-hidden="true"></i></span>
           <h5>Visual Design</h5>
-          <p>Adobe Photoshop</p>
-          <p>Adobe Lightroom</p>
+          <p>Adobe Illustrator,Adobe Photoshop, Adobe Lightroom</p>
         </div>
       </div>
 
@@ -117,7 +116,7 @@
         </div>
       </div>
       <div class="col-md-6">
-        <h5>Meduusa time tracker</h5>
+        <h5><a href="https://nicou.me/meduusa/kirjaudu?logout">Meduusa time tracker</a></h5>
         <p>Group project made during a software development course in Haaga-Helia.
            The idea is that user can log how many hours they have spent working on a project.
            I and one other person wrote almost whole front-end and we did visual design also.
@@ -133,14 +132,27 @@
     <div class="row projekti">
       <div class="col-md-6">
         <div class="projektiKuva">
-          <img src="img/pizzaSivu.png" alt="">
+          <img src="img/reactCryptoIndex.png" alt="">
         </div>
       </div>
       <div class="col-md-6">
-        <h5>Castello é fiori, pizza online shop</h5>
-        <p>Group project made during our first software development course in Haaga-Helia.
-          Our task was to build online shop for fictional pizzeria. I made and designed whole front-end for the page. This was my first time using bootstrap.
-          The <a href="https://github.com/a1500848/meduusa_2">Github repository</a> has a better list of all the implemented features and technologies used.
+        <h5><a href="https://react-crypto-app.herokuapp.com/">Crypto Coin</a></h5>
+        <p>
+          Crypto Coin is a site where you can see different crypto currencies value live. This site is made with React and uses API to get crypto currencies data.
+         </p>
+      </div>
+    </div>
+
+    <div class="row projekti">
+      <div class="col-md-6">
+        <div class="projektiKuva">
+          <img src="img/MeanCrudIndex.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h5><a href="https://github.com/BoneJone/MEAN-CRUD-app">MEAN Lorem ipsum</a></h5>
+        <p>
+          Site made with MongoDB, Express.js, Angular, NodeJS. This site is a basic CRUD app where you can see posts from <a href="https://jsonplaceholder.typicode.com/">API</a> then you can add them to your list, edit and delete. <a href="https://github.com/BoneJone/MEAN-CRUD-app">Here</a> is a link for GitHub repository.
          </p>
       </div>
     </div>
