added a two more projects

--- a/index.html
+++ b/index.html
@@ -109,6 +109,41 @@
         <hr>
       </div>
     </div>
+
+    <div class="row projekti">
+      <div class="col-md-6">
+        <div class="projektiKuva">
+          <img src="img/peppiEtusivu.png" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h5><a href="http://www.peppi-konsortio.fi/peppi-konsortio/">Peppi järjestelmä</a></h5>
+        <p>
+          School project made in colloboration with Haaga-Helia and and Eduix Oy. Project was made in scrum-teams. We worked with this project from 16.1-17.5.2017.
+          Me and my friend were named in responsibility to design the site so it is easy to use for a user and to look simple but still modern.
+          We used CSS3 framework that Eduix was made to code the layout, other technologies used in this project were Java for back-end and HTML CSS3 and JS for front-end.
+         </p>
+      </div>
+    </div>
+
+    <div class="row projekti">
+      <div class="col-md-6">
+        <div class="projektiKuva">
+          <img src="img/xprt.svg" alt="">
+        </div>
+      </div>
+      <div class="col-md-6">
+        <h5><a href="https://github.com/Softala3XPRT/xprt-app">Xprt App</a></h5>
+        <p>
+          School project made in colloboration with Haaga-Helia, Futurice and HundrED. Xprt App is an application that is used for school teachers to search for
+          expert in some specific field who has made profile in Xprt App. Experts do these jobs for pro bono.
+          For this project me and my friend were name in responsibility mainly in front-end coding but we were also given a role for design.
+          This project was made with React, Redux, PostgreSQL and for layout we used Google Material-UI.
+          <a href="https://github.com/Softala3XPRT/xprt-app">Here</a> is a link for github.
+         </p>
+      </div>
+    </div>
+
     <div class="row projekti">
       <div class="col-md-6">
         <div class="projektiKuva">
